--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,41 @@
-
-<html>
+<!doctype html>
+<html lang="ru">
 <head>
-   <meta charset="utf-8">
-   <title>Занятие 00: Введение в курс</title>
+   <meta charset="UTF-8">
+   <meta name="viewport"
+         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+   <link rel="stylesheet" href="">
+   <title>Занятие 1</title>
 </head>
+<body style="text-align: center; font-size: 18px;">
+   <header style="margin: 40px 0px;">
+      <div>
+         <img src="img/logo.jpg" height="30px;" alt="logo">
+         <span style="font-size: 40px; text-transform:uppercase; font-family: Tahoma, Geneva, Verdana,sans-serif;" title="tensor">Tenzor school</span>
 
-<body style="text-align: center">
-<h1>Привет, Тензор! </h1>
-<h2>Оказывается, когда запущен пхпШторм, и устанавливаешь ноду, то необходимо перезагрузить после установки пхпшторм,
-   иначе не будет работать внутренняя консоль! (убил пол часа на поиск проблемы :)</h2>
-   <img class="image" src="/images/chuck-norris.jpg" />
+         <p title="qweqweqwe">Эта страница школы Тензор</p>
+      </div>
+   </header>
+   <div>
+         <div style="display: inline-block">
+            <img src="img/logo.jpg" height="30px;" alt="logo">
+            <span style="font-size: 40px; text-transform:uppercase; font-family: Tahoma, Geneva, Verdana,sans-serif;" title="tensor">Tenzor school</span>
+            <p title="qweqweqwe">Эта страница школы Тензор</p>
+         </div>
+      <div style="display: inline-block">
+         <img src="img/logo.jpg" height="30px;" alt="logo">
+         <span style="font-size: 40px; text-transform:uppercase; font-family: Tahoma, Geneva, Verdana,sans-serif;" title="tensor">Tenzor school</span>
+
+         <p title="qweqweqwe">Эта страница школы Тензор</p>
+      </div>
+      <div style="display: inline-block">
+         <img src="img/logo.jpg" height="30px;" alt="logo">
+         <span style="font-size: 40px; text-transform:uppercase; font-family: Tahoma, Geneva, Verdana,sans-serif;" title="tensor">Tenzor school</span>
+         <div style="text-align: center;">
+            <span style="border-top: 3px solid black; width: 100px; display: inline-block;"></span>
+         </div>
+         <p title="qweqweqwe">Эта страница школы Тензор</p>
+      </div>
+      </div>
 </body>
-
 </html>
