--- a/public/index.html
+++ b/public/index.html
@@ -2,40 +2,52 @@
 <html lang="ru">
 <head>
    <meta charset="UTF-8">
-   <meta name="viewport"
-         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-   <link rel="stylesheet" href="">
+   <meta name="viewport" width="device-width" content="initial-scale=1.0">
+   <link rel="stylesheet" href="css/style.css">
    <title>Занятие 1</title>
 </head>
-<body style="text-align: center; font-size: 18px;">
-   <header style="margin: 40px 0px;">
-      <div>
-         <img src="img/logo.jpg" height="30px;" alt="logo">
-         <span style="font-size: 40px; text-transform:uppercase; font-family: Tahoma, Geneva, Verdana,sans-serif;" title="tensor">Tenzor school</span>
-
-         <p title="qweqweqwe">Эта страница школы Тензор</p>
+<body>
+   <header>
+      <div class="logo">
+         <img src="images/logo.jpg" alt="logo">
+         <span>TENZOR SCHOOL</span>
       </div>
    </header>
-   <div>
-         <div style="display: inline-block">
-            <img src="img/logo.jpg" height="30px;" alt="logo">
-            <span style="font-size: 40px; text-transform:uppercase; font-family: Tahoma, Geneva, Verdana,sans-serif;" title="tensor">Tenzor school</span>
-            <p title="qweqweqwe">Эта страница школы Тензор</p>
+   <div class="wrapper">
+      <p>Это страница школы Тензор в городе Новосибирск. Здесь я начинаю пробовать писать что-то, помимо
+      бекенда. </p>
+      <div class="users">
+         <div class="card">
+            <img src="images/ava01.jpg" alt="avatar01">
+            <p class="surname">Фамилия, имя</p>
+            <p class="universitet">Вуз, курс</p>
          </div>
-      <div style="display: inline-block">
-         <img src="img/logo.jpg" height="30px;" alt="logo">
-         <span style="font-size: 40px; text-transform:uppercase; font-family: Tahoma, Geneva, Verdana,sans-serif;" title="tensor">Tenzor school</span>
-
-         <p title="qweqweqwe">Эта страница школы Тензор</p>
-      </div>
-      <div style="display: inline-block">
-         <img src="img/logo.jpg" height="30px;" alt="logo">
-         <span style="font-size: 40px; text-transform:uppercase; font-family: Tahoma, Geneva, Verdana,sans-serif;" title="tensor">Tenzor school</span>
-         <div style="text-align: center;">
-            <span style="border-top: 3px solid black; width: 100px; display: inline-block;"></span>
+         <div class="card">
+            <img src="images/ava02.jpg" alt="avatar02">
+            <p class="surname">Фамилия, имя</p>
+            <p class="universitet">Вуз, курс</p>
          </div>
-         <p title="qweqweqwe">Эта страница школы Тензор</p>
+         <div class="card">
+            <img src="images/ava03.jpg" alt="avatar03">
+            <p class="surname">Фамилия, имя</p>
+            <p class="universitet">Вуз, курс</p>
+         </div>
+         <div class="card">
+            <img src="images/ava04.jpg" alt="avatar04">
+            <p class="surname">Фамилия, имя</p>
+            <p class="universitet">Вуз, курс</p>
+         </div>
+         <div class="card">
+            <img src="images/ava05.jpg" alt="avatar04">
+            <p class="surname">Фамилия, имя</p>
+            <p class="universitet">Вуз, курс</p>
+         </div>
+         <div class="card">
+            <img src="images/ava06.jpg" alt="avatar06">
+            <p class="surname">Фамилия, имя</p>
+            <p class="universitet">Вуз, курс</p>
+         </div>
       </div>
-      </div>
+   </div>
 </body>
 </html>
