--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
    <meta charset="UTF-8">
-   <meta name="viewport" width="device-width" content="initial-scale=1.0">
+   <meta name="viewport" content="initial-scale=1.0">
    <link rel="stylesheet" href="css/style.css">
    <title>Занятие 1</title>
 </head>
