--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,150 @@
-
-<html>
+<!doctype html>
+<html lang="ru">
 <head>
-   <meta charset="utf-8">
-   <title>Занятие 00: Введение в курс</title>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="minimum-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Онлайн-школа Тензор</title>
 </head>
-
-<body style="text-align: center">
-<h1>Привет, Тензор! </h1>
-<h2>Оказывается, когда запущен пхпШторм, и устанавливаешь ноду, то необходимо перезагрузить после установки пхпшторм,
-   иначе не будет работать внутренняя консоль! (убил пол часа на поиск проблемы :)</h2>
-   <img class="image" src="/images/chuck-norris.jpg" />
+<body>
+<header>
+    <div class="header">
+        <div class="header__logo">Онлайн-школа Тензор</div>
+        <div class="links">
+            <div class="links__item"></div>
+            <div class="links__item"></div>
+            <div class="links__item"></div>
+        </div>
+    </div>
+</header>
+<aside>
+    <ul class="aside">
+        <li class="aside__header">Мои курсы</li>
+        <li class="aside__item">Будущий инженер-программист</li>
+        <li class="aside__item">Python-разработчик</li>
+    </ul>
+</aside>
+<main>
+    <div class="main">
+        <div class="main-item">
+            <div class="main-item__logo">
+                <img src="images/intro.png" alt="intro">
+            </div>
+            <div>
+                <div class="main-item__header">00-Введение</div>
+                <div class="main-item__date">20 апреля 2020</div>
+                <div class="main-item__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut distinctio
+                    dolores dolorum.
+                </div>
+            </div>
+            <div class="main-item__button">Перейти</div>
+        </div>
+        <div class="main-item">
+            <div class="main-item__logo">
+                <img src="images/1_aK6-A2EmtFCYriaKgoguPw.png" alt="intro">
+            </div>
+            <div>
+                <div class="main-item__header">00-Введение</div>
+                <div class="main-item__date">20 апреля 2020</div>
+                <div class="main-item__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut distinctio
+                    dolores dolorum.
+                </div>
+            </div>
+            <div class="main-item__button">Перейти</div>
+        </div>
+        <div class="main-item">
+            <div class="main-item__logo">
+                <img src="images/responsive-web-design.png" alt="intro">
+            </div>
+            <div>
+                <div class="main-item__header">00-Введение</div>
+                <div class="main-item__date">20 апреля 2020</div>
+                <div class="main-item__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut distinctio
+                    dolores dolorum.
+                </div>
+            </div>
+            <div class="main-item__button">Перейти</div>
+        </div>
+        <div class="main-item">
+            <div class="main-item__logo">
+                <img src="images/javascript-security.png" alt="intro">
+            </div>
+            <div>
+                <div class="main-item__header">00-Введение</div>
+                <div class="main-item__date">20 апреля 2020</div>
+                <div class="main-item__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut distinctio
+                    dolores dolorum.
+                </div>
+            </div>
+            <div class="main-item__button">Перейти</div>
+        </div>
+        <div class="main-item">
+            <div class="main-item__logo">
+                <img src="images/intro.png" alt="intro">
+            </div>
+            <div>
+                <div class="main-item__header">00-Введение</div>
+                <div class="main-item__date">20 апреля 2020</div>
+                <div class="main-item__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut distinctio
+                    dolores dolorum.
+                </div>
+            </div>
+            <div class="main-item__button">Перейти</div>
+        </div>
+        <div class="main-item">
+            <div class="main-item__logo">
+                <img src="images/intro.png" alt="intro">
+            </div>
+            <div>
+                <div class="main-item__header">00-Введение</div>
+                <div class="main-item__date">20 апреля 2020</div>
+                <div class="main-item__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut distinctio
+                    dolores dolorum.
+                </div>
+            </div>
+            <div class="main-item__button">Перейти</div>
+        </div>
+        <div class="main-item">
+            <div class="main-item__logo">
+                <img src="images/intro.png" alt="intro">
+            </div>
+            <div>
+                <div class="main-item__header">00-Введение</div>
+                <div class="main-item__date">20 апреля 2020</div>
+                <div class="main-item__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut distinctio
+                    dolores dolorum.
+                </div>
+            </div>
+            <div class="main-item__button">Перейти</div>
+        </div>
+        <div class="main-item">
+            <div class="main-item__logo">
+                <img src="images/intro.png" alt="intro">
+            </div>
+            <div>
+                <div class="main-item__header">00-Введение</div>
+                <div class="main-item__date">20 апреля 2020</div>
+                <div class="main-item__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut distinctio
+                    dolores dolorum.
+                </div>
+            </div>
+            <div class="main-item__button">Перейти</div>
+        </div>
+    </div>
+    <div class="main__button">
+        Показать еще
+    </div>
+</main>
+<footer>
+    <div class="footer">
+        <div class="footer__copyright">
+            (c)2020. компания Тензор
+        </div>
+        <div class="footer__rules">
+            Правила пользования
+        </div>
+    </div>
+</footer>
 </body>
-
 </html>
