--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 <aside>
     <ul class="aside">
         <li class="aside__header">Мои курсы</li>
-        <li class="aside__item">Будущий инженер-программист</li>
+        <li class="aside__item aside__item_active">Будущий инженер-программист</li>
         <li class="aside__item">Python-разработчик</li>
     </ul>
 </aside>
