--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,27 @@
 <!doctype html>
 <html lang="ru">
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="initial-scale=1.0">
-   <script type="module" src="js/app.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="initial-scale=1.0">
+    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <script crossorigin src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    <script src="js/Dataset.class.js"></script>
+    <script type="module" src="js/PersonFactory.Class.js"></script>
+    <script type="text/babel" src="js/Header.Class.js"></script>
 
-   <link rel="stylesheet" href="css/style.css">
-   <title>Занятие 1</title>
+    <script type="text/babel" src="js/app.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Занятие 1</title>
 </head>
 <body>
-   <header>
-
-   </header>
-   <main class="wrapper">
-      <h2>студенты</h2>
-      <div class="students"></div>
-      <hr>
-      <h2>Преподаватели</h2>
-      <div class="teachers"></div>
-   </main>
+<div id="header"></div>
+<main class="wrapper">
+    <h2>студенты</h2>
+    <div class="students"></div>
+    <hr>
+    <h2>Преподаватели</h2>
+    <div class="teachers"></div>
+</main>
 </body>
 </html>
